pkg/kgateway/translator/gateway/testutils/outputs/traffic-policy/timeout-retry.yaml
Clusters:
- connectTimeout: 5s
  edsClusterConfig:
    edsConfig:
      ads: {}
      resourceApiVersion: V3
  ignoreHealthOnHostRemoval: true
  metadata: {}
  name: kube_default_example-svc_80
  type: EDS
- connectTimeout: 5s
  metadata: {}
  name: test-backend-plugin_default_example-svc_80
Listeners:
- address:
    socketAddress:
      address: '::'
      ipv4Compat: true
      portValue: 80
  filterChains:
  - filters:
    - name: envoy.filters.network.http_connection_manager
      typedConfig:
        '@type': type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
        httpFilters:
        - name: envoy.filters.http.router
          typedConfig:
            '@type': type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
        mergeSlashes: true
        normalizePath: true
        rds:
          configSource:
            ads: {}
            resourceApiVersion: V3
          routeConfigName: listener~80
        statPrefix: http
        useRemoteAddress: true
    name: listener~80
  name: listener~80
Routes:
- ignorePortInHostMatching: true
  name: listener~80
  virtualHosts:
  - domains:
    - builtin.com
    metadata:
      filterMetadata:
        merge.TrafficPolicy.gateway.kgateway.dev:
          retry:
          - gateway.kgateway.dev/TrafficPolicy/default/example-gateway-retry-and-timeout
    name: listener~80~builtin_com
    retryPolicy:
      numRetries: 3
      retryBackOff:
        baseInterval: 0.025s
      retryOn: gateway-error
    routes:
    - match:
        prefix: /
      metadata:
        filterMetadata:
          merge.TrafficPolicy.gateway.kgateway.dev:
            retry:
            - gateway.kgateway.dev/TrafficPolicy/default/overridden-by-builtin-policies
            timeouts:
            - gateway.kgateway.dev/TrafficPolicy/default/overridden-by-builtin-policies
      name: listener~80~builtin_com-route-0-httproute-route-builtin-policies-default-0-0-matcher-0
      route:
        cluster: kube_default_example-svc_80
        clusterNotFoundResponseCode: INTERNAL_SERVER_ERROR
        retryPolicy:
          numRetries: 5
          perTryTimeout: 0.005s
          retriableStatusCodes:
          - 500
          - 503
          retryBackOff:
            baseInterval: 5s
          retryOn: cancelled,connect-failure,refused-stream,retriable-headers,retriable-status-codes,unavailable
        timeout: 5s
  - domains:
    - example-retry-and-timeouts.com
    metadata:
      filterMetadata:
        merge.TrafficPolicy.gateway.kgateway.dev:
          retry:
          - gateway.kgateway.dev/TrafficPolicy/default/example-gateway-retry-and-timeout
    name: listener~80~example-retry-and-timeouts_com
    retryPolicy:
      numRetries: 3
      retryBackOff:
        baseInterval: 0.025s
      retryOn: gateway-error
    routes:
    - match:
        safeRegex:
          googleRe2: {}
          regex: /.+/foo
      metadata:
        filterMetadata:
          merge.TrafficPolicy.gateway.kgateway.dev:
            retry:
            - gateway.kgateway.dev/TrafficPolicy/default/example-route-retry-and-timeouts
            timeouts:
            - gateway.kgateway.dev/TrafficPolicy/default/example-route-retry-and-timeouts
      name: listener~80~example-retry-and-timeouts_com-route-0-grpcroute-example-grpc-route-default-0-0-matcher-0
      route:
        cluster: kube_default_example-svc_80
        clusterNotFoundResponseCode: INTERNAL_SERVER_ERROR
        retryPolicy:
          numRetries: 5
          perTryTimeout: 1s
          retriableStatusCodes:
          - 409
          retryBackOff:
            baseInterval: 0.010s
          retryOn: gateway-error,reset,retriable-status-codes
        timeout: 10s
    - match:
        prefix: /
      metadata:
        filterMetadata:
          merge.TrafficPolicy.gateway.kgateway.dev:
            retry:
            - gateway.kgateway.dev/TrafficPolicy/default/example-route-retry-and-timeouts
            timeouts:
            - gateway.kgateway.dev/TrafficPolicy/default/example-route-retry-and-timeouts
      name: listener~80~example-retry-and-timeouts_com-route-1-httproute-example-route-retry-and-timeouts-default-0-0-matcher-0
      route:
        cluster: kube_default_example-svc_80
        clusterNotFoundResponseCode: INTERNAL_SERVER_ERROR
        retryPolicy:
          numRetries: 5
          perTryTimeout: 1s
          retriableStatusCodes:
          - 409
          retryBackOff:
            baseInterval: 0.010s
          retryOn: gateway-error,reset,retriable-status-codes
        timeout: 10s
  - domains:
    - example-retry.com
    metadata:
      filterMetadata:
        merge.TrafficPolicy.gateway.kgateway.dev:
          retry:
          - gateway.kgateway.dev/TrafficPolicy/default/example-gateway-retry-and-timeout
    name: listener~80~example-retry_com
    retryPolicy:
      numRetries: 3
      retryBackOff:
        baseInterval: 0.025s
      retryOn: gateway-error
    routes:
    - match:
        prefix: /
      metadata:
        filterMetadata:
          merge.TrafficPolicy.gateway.kgateway.dev:
            retry:
            - gateway.kgateway.dev/TrafficPolicy/default/example-route-retry
      name: listener~80~example-retry_com-route-0-httproute-example-route-retry-default-0-0-rule0-matcher-0
      route:
        cluster: kube_default_example-svc_80
        clusterNotFoundResponseCode: INTERNAL_SERVER_ERROR
        retryPolicy:
          numRetries: 2
          perTryTimeout: 0.500s
          retriableStatusCodes:
          - 401
          - 402
          retryBackOff:
            baseInterval: 0.050s
          retryOn: connect-failure,gateway-error,reset,retriable-status-codes
  - domains:
    - example.com
    metadata:
      filterMetadata:
        merge.TrafficPolicy.gateway.kgateway.dev:
          retry:
          - gateway.kgateway.dev/TrafficPolicy/default/example-gateway-retry-and-timeout
    name: listener~80~example_com
    retryPolicy:
      numRetries: 3
      retryBackOff:
        baseInterval: 0.025s
      retryOn: gateway-error
    routes:
    - match:
        prefix: /
      metadata:
        filterMetadata:
          merge.TrafficPolicy.gateway.kgateway.dev:
            timeouts:
            - gateway.kgateway.dev/TrafficPolicy/default/example-route-timeout
      name: listener~80~example_com-route-0-httproute-example-route-timeout-default-0-0-matcher-0
      route:
        cluster: kube_default_example-svc_80
        clusterNotFoundResponseCode: INTERNAL_SERVER_ERROR
        idleTimeout: 5s
        timeout: 9s
Statuses:
  gateways:
    default/example-gateway:
      attachedListenerSets: 0
      conditions:
      - lastTransitionTime: null
        message: Successfully accepted Gateway
        reason: Accepted
        status: "True"
        type: Accepted
      - lastTransitionTime: null
        message: Successfully programmed Gateway
        reason: Programmed
        status: "True"
        type: Programmed
      listeners:
      - attachedRoutes: 5
        conditions:
        - lastTransitionTime: null
          message: Successfully accepted Listener
          reason: Accepted
          status: "True"
          type: Accepted
        - lastTransitionTime: null
          message: Successfully verified that Listener has no conflicts
          reason: NoConflicts
          status: "False"
          type: Conflicted
        - lastTransitionTime: null
          message: Successfully resolved all references
          reason: ResolvedRefs
          status: "True"
          type: ResolvedRefs
        - lastTransitionTime: null
          message: Successfully programmed Listener
          reason: Programmed
          status: "True"
          type: Programmed
        name: http
        supportedKinds:
        - group: gateway.networking.k8s.io
          kind: HTTPRoute
        - group: gateway.networking.k8s.io
          kind: GRPCRoute
  grpcRoutes:
    default/example-grpc-route:
      parents:
      - conditions:
        - lastTransitionTime: null
          message: Successfully accepted Route
          reason: Accepted
          status: "True"
          type: Accepted
        - lastTransitionTime: null
          message: Successfully resolved all references
          reason: ResolvedRefs
          status: "True"
          type: ResolvedRefs
        controllerName: kgateway
        parentRef:
          group: ""
          kind: ""
          name: example-gateway
  httpRoutes:
    default/example-route-retry:
      parents:
      - conditions:
        - lastTransitionTime: null
          message: Successfully accepted Route
          reason: Accepted
          status: "True"
          type: Accepted
        - lastTransitionTime: null
          message: Successfully resolved all references
          reason: ResolvedRefs
          status: "True"
          type: ResolvedRefs
        controllerName: kgateway
        parentRef:
          group: ""
          kind: ""
          name: example-gateway
    default/example-route-retry-and-timeouts:
      parents:
      - conditions:
        - lastTransitionTime: null
          message: Successfully accepted Route
          reason: Accepted
          status: "True"
          type: Accepted
        - lastTransitionTime: null
          message: Successfully resolved all references
          reason: ResolvedRefs
          status: "True"
          type: ResolvedRefs
        controllerName: kgateway
        parentRef:
          group: ""
          kind: ""
          name: example-gateway
    default/example-route-timeout:
      parents:
      - conditions:
        - lastTransitionTime: null
          message: Successfully accepted Route
          reason: Accepted
          status: "True"
          type: Accepted
        - lastTransitionTime: null
          message: Successfully resolved all references
          reason: ResolvedRefs
          status: "True"
          type: ResolvedRefs
        controllerName: kgateway
        parentRef:
          group: ""
          kind: ""
          name: example-gateway
    default/route-builtin-policies:
      parents:
      - conditions:
        - lastTransitionTime: null
          message: Successfully accepted Route
          reason: Accepted
          status: "True"
          type: Accepted
        - lastTransitionTime: null
          message: Successfully resolved all references
          reason: ResolvedRefs
          status: "True"
          type: ResolvedRefs
        controllerName: kgateway
        parentRef:
          group: ""
          kind: ""
          name: example-gateway
  policies:
    TrafficPolicy/default/example-gateway-retry-and-timeout:
      ancestors:
      - ancestorRef:
          group: gateway.networking.k8s.io
          kind: Gateway
          name: example-gateway
          namespace: default
        conditions:
        - lastTransitionTime: null
          message: Policy accepted
          reason: Valid
          status: "True"
          type: Accepted
        - lastTransitionTime: null
          message: Attached to all targets
          reason: Attached
          status: "True"
          type: Attached
        controllerName: kgateway.dev/kgateway
    TrafficPolicy/default/example-route-retry:
      ancestors:
      - ancestorRef:
          group: gateway.networking.k8s.io
          kind: Gateway
          name: example-gateway
          namespace: default
        conditions:
        - lastTransitionTime: null
          message: Policy accepted
          reason: Valid
          status: "True"
          type: Accepted
        - lastTransitionTime: null
          message: Attached to all targets
          reason: Attached
          status: "True"
          type: Attached
        controllerName: kgateway.dev/kgateway
    TrafficPolicy/default/example-route-retry-and-timeouts:
      ancestors:
      - ancestorRef:
          group: gateway.networking.k8s.io
          kind: Gateway
          name: example-gateway
          namespace: default
        conditions:
        - lastTransitionTime: null
          message: Policy accepted
          reason: Valid
          status: "True"
          type: Accepted
        - lastTransitionTime: null
          message: Attached to all targets
          reason: Attached
          status: "True"
          type: Attached
        controllerName: kgateway.dev/kgateway
    TrafficPolicy/default/example-route-timeout:
      ancestors:
      - ancestorRef:
          group: gateway.networking.k8s.io
          kind: Gateway
          name: example-gateway
          namespace: default
        conditions:
        - lastTransitionTime: null
          message: Policy accepted
          reason: Valid
          status: "True"
          type: Accepted
        - lastTransitionTime: null
          message: Attached to all targets
          reason: Attached
          status: "True"
          type: Attached
        controllerName: kgateway.dev/kgateway
    TrafficPolicy/default/overridden-by-builtin-policies:
      ancestors:
      - ancestorRef:
          group: gateway.networking.k8s.io
          kind: Gateway
          name: example-gateway
          namespace: default
        conditions:
        - lastTransitionTime: null
          message: Policy accepted
          reason: Valid
          status: "True"
          type: Accepted
        - lastTransitionTime: null
          message: Attached to all targets
          reason: Attached
          status: "True"
          type: Attached
        controllerName: kgateway.dev/kgateway
